avances front diagramacion guardias

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/x-icon" href="/img/bomberosicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>BomberOS</title>
+
+    <!-- ✅ FullCalendar estilos globales -->
+    <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.css" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
