agregado de calendario tus guardias

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,8 @@
     <!-- ✅ FullCalendar estilos globales -->
     <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.css" rel="stylesheet" />
     <link rel="website icon" type="icon" href="/img/bomberosicon.ico" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/core@6.1.19/index.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@6.1.19/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
